fix the screen for people on iphone
there are other ones i should support

--- a/css/style.css
+++ b/css/style.css
@@ -181,3 +181,15 @@ body {
   width: 100%;
   height: 100%;
 }
+
+.frame {
+  width: 700px;
+  height: 700px;
+}
+
+@media only screen and (max-width:999px) {
+  .frame {
+    width: 300px;
+    height: 600px;
+  }
+}
